зименил адреса фоток и лого

--- a/index.html
+++ b/index.html
@@ -869,15 +869,15 @@
             <p class="covarage__desc">
                 See LaslesVPN everywhere to make it easier for you when you move locations.
             </p>
-            <img src="/assets/images/map.png" alt="covarage map" class="covarage__img">
+            <img src="./assets/images/map.png" alt="covarage map" class="covarage__img">
         </section>
         <section class="customers">
             <div class="customers__logo">
-                <img src="/assets/images/netflix.png" alt="netflix logo" class="customer__logo-logo" />
-                <img src="/assets/images/reddit.png" alt="reddit logo" class="customer__logo-logo">
-                <img src="/assets/images/amazon.png" alt="amazon logo" width="277px" height="200px">
-                <img src="/assets/images/discord.png" alt="discord logo" class="customer__logo-logo">
-                <img src="/assets/images/spotify.png" alt="spotify logo" class="customer__logo-logo">
+                <img src="./assets/images/netflix.png" alt="netflix logo" class="customer__logo-logo" />
+                <img src="./assets/images/reddit.png" alt="reddit logo" class="customer__logo-logo">
+                <img src="./assets/images/amazon.png" alt="amazon logo" width="277px" height="200px">
+                <img src="./assets/images/discord.png" alt="discord logo" class="customer__logo-logo">
+                <img src="./assets/images/spotify.png" alt="spotify logo" class="customer__logo-logo">
             </div>
 
             <h2 class="customer__title">Trusted by Thousands of Happy Customer</h2>
@@ -889,7 +889,7 @@
                     <div class="customer__card">
                         <header class="customer__card--header-container">
                             <div class="customer__card--header-container">
-                                <img src="/assets/images/user1.jpg" alt="user photo or icon"
+                                <img src="./assets/images/user1.jpg" alt="user photo or icon"
                                     class="customer__card__user--photo">
                                 <div class="customer__card__user--info">
                                     <span class="customer__card__user--name">Yessica Christy</span>
@@ -897,7 +897,7 @@
                                 </div>
                             </div>
     
-                            <div class="customer__card--header-container">
+                            <div class="customer__card--header-container">  
                                 <span class="cusumer__card--raiting">4.5</span>
                                 <svg width="14" height="14" viewBox="0 0 14 14" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
@@ -918,7 +918,7 @@
                     <div class="customer__card">
                         <header class="customer__card--header-container">
                             <div class="customer__card--header-container">
-                                <img src="/assets/images/user2.jpg" alt="user photo or icon"
+                                <img src="./assets/images/user2.jpg" alt="user photo or icon"
                                     class="customer__card__user--photo">
                                 <div class="customer__card__user--info">
                                     <span class="customer__card__user--name">Kim Young Jou</span>
@@ -946,7 +946,7 @@
                     <div class="customer__card">
                         <header class="customer__card--header-container">
                             <div class="customer__card--header-container">
-                                <img src="/assets/images/user3.jpg" alt="user photo or icon"
+                                <img src="./assets/images/user3.jpg" alt="user photo or icon"
                                     class="customer__card__user--photo">
                                 <div class="customer__card__user--info">
                                     <span class="customer__card__user--name">Viezh Robert</span>
