полностю переделал меню

--- a/index.html
+++ b/index.html
@@ -22,42 +22,35 @@
                 </svg>
                 <span class="logo__text">Lasles<b class="bold">VPN</b></span>
             </div>
-            <div class="header--content " id="headerContent">
-               
-                
-                <nav>
-                    <ul class="nav " id="navigationMenu">
-                        <li>
-                            <a class="nav--text" href="#">About</a>
-                        </li>
-                        <li>
-                            <a class="nav--text" href="#">Features</a>
-                        </li>
-                        <li>
-                            <a class="nav--text" href="#">Pricing</a>
-                        </li>
-                        <li>
-                            <a class="nav--text" href="#">Testimonials</a>
-                        </li>
-                        <li>
-                            <a class="nav--text" href="#">Help</a>
-                        </li>
-                    </ul>
-                </nav>
-                <div class="header__buttons open">
-                    <button class="header__button-signIn button-without-border transition">
-                        Sign In
-                    </button>
-                    <button class="header__button-signUp button-red-border transition">
-                        Sign Up
-                    </button>
+            <nav class="nav" id="navigationMenu">
+                <ul class="nav__list">
+                    <li>
+                        <a href="#">About</a>
+                    </li>
+                    <li>
+                        <a href="#">Features</a>
+                    </li>
+                    <li>
+                        <a href="#">Pricing</a>
+                    </li>
+                    <li>
+                        <a href="#">Testimonials</a>
+                    </li>
+                    <li>
+                        <a href="#">Help</a>
+                    </li>
+                </ul>
+                <div class="auth--buttons">
+                    <button class="button-without-border">Sign In</button>
+                    <button class="button-red-border">Sign Up</button>
                 </div>
-            </div>
-            <button class="burger ">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </button>
+            </nav>
+            <button class="burger" aria-expanded="false" aria-label="burger menu button">
+                <span class="burger__line"></span>
+                <span class="burger__line"></span>
+                <span class="burger__line"></span>
+            </button>
+
         </div>
     </header>
     <main class="main">
