--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <script defer src="./index.js"></script>
     </head>
 
-<body>
+<body id="body">
     <!-- header section -->
     <header class="header">
         <div class="header__container">
